feat:增加首页介绍,去掉不必要的提交文件

--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,8 @@ pnpm-global
 dist/
 
 # vitepress build output
-.vitepress/dist
-.vitepress/cache
+docs/.vitepress/dist
+docs/.vitepress/cache
 
 
 # Serverless directories
